tests/positive/pr113_discriminant_constraints.safe
-- Test: pr113_discriminant_constraints
-- Description: Multiple scalar discriminants, defaults, and positional/named constraints on objects and profiles.
-- Expected: ACCEPT

package pr113_discriminant_constraints

   default_kind : constant character = 'A';
   default_count : constant integer = 2;

   type packet (active : boolean = true, kind : character = 'A', count : integer = 0) is
      record
         value : integer;

   defaulted : packet = (active = true, kind = 'A', count = 0, value = 1);
   positional : packet (true, 'A', 1) = (value = 2);
   named : packet (active = true, kind = default_kind, count = default_count) = (value = 3);

   function take (item : in packet (active = true, kind = default_kind, count = default_count))
      returns packet (active = true, kind = default_kind, count = default_count)
      limit : constant integer = default_count;
      local : packet (active = true, kind = default_kind, count = limit) = item;

      return local;

