tests/negative/neg_pr113_unknown_discriminant_name.safe
package neg_pr113_unknown_discriminant_name
   type packet (kind : character = 'A', count : integer = 0) is
      record
         value : integer;

   p : packet (mode = 'A', count = 1) = (value = 1);

